style.css
/* FONTS */
@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap');
@font-face {
  font-family: 'Princess Diana';
  src: url('./assets/fonts/Princess-Diana.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

/* Использование */
.element {
  font-family: 'Princess Diana', cursive, sans-serif;
}

* {
  box-sizing: border-box;
}

ul {
  margin: 0;
  padding: 0;
}

.header,
.main,
.footer {
  width: 100%;
  max-width: 440px;
}

.app {
  background-color: var(--wheat);
  display: flex;
  align-items: center;
  flex-direction: column;
}

:root {
  --blue: #9db0cc;
  --color1: #566a88;
  --wheat: #f8f4e8;
  --white: #fff;
  --black: #1e1f21;

  --background-color: #fcfdff;

  --image-back: #fff;
  --title-color: #000000;
  --text-color: #1e1e1e;

  --title-family: 'Playfair Display', serif;
}

p,
h1,
h2,
h3,
h4,
body {
  margin: 0;
}

.app {
  font-family: 'Manrope', sans-serif;
  background-color: var(--wheat);
}

.princess {
  font-family: 'Princess Diana', cursive, sans-serif;
  font-size: 60px;
  font-weight: 400;
  line-height: 57px;
  letter-spacing: -1px;
  color: var(--color1);
}

.header,
.section__greeting {
  background-color: var(--blue);
}

.section.section__greeting {
  padding-bottom: 0;
}

.container {
  padding: 0 20px;
  width: 100%;
  max-width: 440px;
  margin: 0 auto;
}

.text {
  font-weight: 500;
  font-style: Medium;
  font-size: 16px;
  line-height: 18px;
  text-align: center;
}

.section {
  padding: 28px 0;
}

/* HEADER */
.header_content {
  padding: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  color: var(--white);
  font-size: 10px;
}

.header_title {
  padding: 4px 8px;
  outline: 1px solid var(--white);
  border-radius: 100px;
}

.greeting__title,
.section__title {
  position: relative;
  font-weight: 700;
  font-size: 32px;
  line-height: 28px;
  letter-spacing: -1px;
  text-align: center;
  color: var(--black);
}

.content {
  position: relative;
}

.greeting__cards_paper {
  position: absolute;
  z-index: -1;
  bottom: 120px;
  width: 100%;
  left: 0;
}

.content {
  position: relative;
  z-index: 1;
}

.section__greeting::after {
  content: '';
  position: absolute;
  max-width: 440px;
  /* bottom: 210px; */
  top: 310px;
  width: 100%;
  height: 260px;
  background-image: url(./assets/header_papper.png);
  background-repeat: no-repeat;
  background-size: cover;
  z-index: -1;
}

.section__greeting_content {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 24px;
  margin-bottom: 24px;
}

.greeting__title .princess,
.greeting__title_span {
  position: relative;
  top: -20px;
  color: var(--wheat);
}

.section__greeting_content .text,
.greeting__title {
  max-width: 262px;
  color: var(--wheat);
}

.greeting__cards {
  position: relative;
  display: flex;
  height: 171px;
}

.first_card,
.second_card {
  position: absolute;
}

.second_card {
  right: 0;
}

.first_card {
  bottom: -83px;
}

.greeting__cards .card {
  width: 100%;
  max-width: 125px;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.card .name {
  width: 100px;
  padding: 4px;

  outline: 1px solid var(--white);
  border-radius: 100px;

  font-size: 10px;
  color: var(--white);
  text-align: center;
}

.image {
  width: 125px;
  height: 125px;
}

.card_icon {
  width: 28px;
  height: 18px;
}

/* DATE */
.section__date {
  padding-top: 80px;
}

.date__title {
  display: flex;
  align-items: center;
  flex-direction: column;
  gap: 24px;

  margin-bottom: 54px;

  .section__title,
  .text {
    max-width: 280px;
    width: 100%;
  }

  .text {
    padding: 0 15px;
  }
}

.date__content {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.date__content_title {
  font-weight: 400;
  font-size: 60px;
  line-height: 57px;
  letter-spacing: -1px;
  text-align: center;
  vertical-align: middle;
}

/* LOCATION */
.location__wrapper {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.location__text_title {
  max-width: 322px;
  display: flex;
  flex-direction: column;
  gap: 24px;

  .section__title {
    position: relative;
    text-align: start;

    .princess {
      position: relative;
      top: -12px;
    }
  }
}

.location__text_content {
  height: 150px;
  display: flex;
  justify-content: space-between;

  .wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 12px;
    align-self: flex-end;

    .content_title {
      font-weight: 700;
      font-style: Bold;
      font-size: 20px;
      line-height: 28px;
      letter-spacing: -1px;
    }

    .text {
      font-size: 10px;
    }
  }
}

.link {
  width: max-content;
  text-decoration: none;
  border-radius: 100px;
  padding: 8px 12px;
  background-color: var(--color1);

  color: var(--wheat);
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
}

img {
  max-width: 100%;
}

/* TIMING */
.section__timing {
  padding-bottom: 56px;
  position: relative;
  color: var(--wheat);
  background-image: url('./assets/list_paper.png');
  background-repeat: no-repeat;
  background-size: 1350px;
  background-position: center center;
}

.section__timing .section__title {
  position: relative;

  margin-bottom: 16px;

  display: flex;
  flex-direction: column;

  color: var(--wheat);
}

.timing__title_span {
  position: relative;
  top: -12px;
}

.section__timing .section__title .princess {
  color: var(--wheat);
}

.timing__list {
  padding: 0;
  margin: 0;

  list-style: none;
  display: flex;
  flex-direction: column;
  gap: 16px;
}

.timing__item {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.item__time {
  /* font-family: Princess Diana; */
  font-weight: 400;
  font-size: 36px;
  line-height: 24px;
  letter-spacing: -1px;
  text-align: center;
  vertical-align: middle;
}

.princess.item__time {
  color: var(--wheat);
}

.h3 {
  font-weight: 700;
  font-size: 20px;
  line-height: 28px;
  letter-spacing: -1px;
  text-align: center;
}

.caption {
  font-weight: 500;
  font-size: 10px;
  line-height: 100%;
  text-align: center;
}

.item__content {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

/* DRESS CODE */
.section__dress-code .section__title .princess {
  position: relative;
  top: -12px;
}

.section__dress-code .text {
  position: relative;
}

.section__dress-code_icon {
  position: absolute;
  right: 2rem;
}

.footer__content .section__title_span {
  top: -20px;
}

.section__title_span {
  position: relative;
  top: -12px;
}

.section__dress-code,
.section__confirmation,
.section__detail {
  .section__title {
    text-align: start;

    margin-bottom: 24px;
  }

  .text {
    text-align: start;
  }
}

.section__dress-code {
  .text {
    margin-bottom: 66px;
  }
}

.detail__text-content {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.detail__cards {
  list-style: none;
  padding: 0;
  margin: 0;

  display: flex;
  flex-direction: column;
  gap: 24px;

  margin-bottom: 24px;
}

.detail__cards_wrapper {
  display: flex;
  justify-content: space-around;
}

.detail__cards_item {
  display: inline-flex;
  text-align: center;
  padding: 4px 18px;

  border-radius: 100px;
  outline: 1px solid var(--blue);

  font-size: 16px;
  line-height: 18px;
  color: var(--blue);
}

.confirmation_content {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

.footer {
  display: flex;
  justify-content: center;
  position: relative;
  padding: 28px 0;

  .princess {
    font-size: 36px;
  }

  .text {
    text-align: start;
  }
}

.footer__content {
  display: flex;
  flex-direction: column;

  .princess {
    margin-bottom: 24px;
  }

  .footer__image {
    align-self: flex-end;
    width: 193px;
    margin-bottom: 84px;
  }
}

.footer__background {
  position: absolute;
  bottom: 0;
  z-index: -1;
}

.footer__timer {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 24px;
  color: var(--wheat);
}

.timer {
  font-size: 20px;
  display: flex;
  gap: 4px;

  .item {
    display: flex;
    flex-direction: column;
    align-items: center;

    font-weight: 700;
    font-size: 20px;

    width: 90px;

    h4 {
      font-size: 16px;
    }
  }
}

